Fixed z-index for seach popup

--- a/Manero_WebApp/wwwroot/css/style.css
+++ b/Manero_WebApp/wwwroot/css/style.css
@@ -971,7 +971,7 @@ header .container .top-menu .menu-icons .overlay {
   width: 100%;
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 95;
   top: 0;
   left: 0;
   background-color: #111111;
@@ -987,7 +987,7 @@ header .container .top-menu .menu-icons .overlay .closebtn {
 header .container .top-menu .menu-icons .overlay .overlay-content {
   position: relative;
   top: 45%;
-  width: 70%;
+  width: 80%;
   text-align: center;
   margin: auto;
 }
@@ -1001,7 +1001,7 @@ header .container .top-menu .menu-icons .overlay .overlay-content form input {
   font-size: 17px;
   border: none;
   float: left;
-  width: 50%;
+  width: 100%;
   background: white;
   border-radius: 15px 0 0 15px;
 }
@@ -1214,6 +1214,7 @@ header .mobile .bottom-nav ul li .footerIcon i {
 
 .page-links .page-link.active {
   color: #F4303C !important;
+  z-index: 0 !important;
 }
 .page-links .page-link.active:hover {
   color: #F4303C;
@@ -1652,6 +1653,7 @@ footer .copyright .social-media a {
 .bestsellers-mobile .container .products .product-card {
   flex: 0 0 auto;
   transition: transform 0.2s, box-shadow 0.2s;
+  z-index: -5;
 }
 .bestsellers-mobile .container .products .product-card:hover {
   transform: translateY(-5px);
@@ -1782,6 +1784,7 @@ footer .copyright .social-media a {
     width: 200px;
     margin: 0;
     transition: transform 0.2s, box-shadow 0.2s;
+    z-index: -5;
   }
   .bestsellers-desktop .container .products .product-card:hover {
     transform: translateY(-5px);
@@ -1954,6 +1957,7 @@ footer .copyright .social-media a {
 .featured-mobile .container .products .product-card {
   flex: 0 0 auto;
   transition: transform 0.2s, box-shadow 0.2s;
+  z-index: -5;
 }
 .featured-mobile .container .products .product-card:hover {
   transform: translateY(-5px);
@@ -2085,6 +2089,7 @@ footer .copyright .social-media a {
     width: 200px;
     margin: 0;
     transition: transform 0.2s, box-shadow 0.2s;
+    z-index: -5;
   }
   .featured-desktop .container .products .product-card:hover {
     transform: translateY(-5px);
