--- a/Manero_WebApp/wwwroot/scss/components/_topNavbar.scss
+++ b/Manero_WebApp/wwwroot/scss/components/_topNavbar.scss
@@ -100,7 +100,7 @@ header {
                     width: 100%;
                     display: none;
                     position: fixed;
-                    z-index: 1;
+                    z-index: 95;
                     top: 0;
                     left: 0;
                     background-color: $color-dark;
@@ -117,7 +117,7 @@ header {
                     .overlay-content {
                         position: relative;
                         top: 45%;
-                        width: 70%;
+                        width: 80%;
                         text-align: center;
                         margin: auto;
 
@@ -131,7 +131,7 @@ header {
                                 font-size: 17px;
                                 border: none;
                                 float: left;
-                                width: 50%;
+                                width: 100%;
                                 background: white;
                                 border-radius: 15px 0 0 15px;
 
@@ -392,6 +392,7 @@ header {
 
 .page-links .page-link.active {
     color: $color-red !important;
+    z-index: 0 !important;
 
     &:hover {
         color: $color-red;
